--- a/houses/static/houses/css/house_detail.css
+++ b/houses/static/houses/css/house_detail.css
@@ -266,6 +266,7 @@
 /* Interaction Buttons */
 .interaction-buttons {
     display: flex;
+    flex-direction: row;
     gap: 1rem;
 }
 
@@ -281,6 +282,7 @@
     transition: var(--transition);
     font-size: 1rem;
     font-weight: 500;
+    width: fit-content;
 }
 
 .interaction-button:hover {
@@ -345,7 +347,7 @@
     }
     
     .interaction-buttons {
-        flex-direction: column;
+        flex-direction: row;
     }
     
     .action-buttons {
